# Aurora

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  Dockerfile  Dockerfile.dockerignore  HANDOFF_SPIDERMONKEY_YOUTUBE.md  Makefile  README.md  REFLOW_ANALYSIS.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  DECOMPOSITION.md  ENGINE_TEARDOWN.md  IMPLEMENTATION_PLAN.md  MOCKUP_REFLOW_IMPLEMENTATION_PLAN.md  MOCKUP_REFLOW_STATUS.md  NATIVE_CUSTOM_ELEMENTS_PLAN.md  POSTMORTEM-youtube-blank-page.md  PRINCIPAL_REVIEW.md  REFLOW_ANALYSIS.md  REFLOW_CRITICAL_NEXT.md  RUST_BEST_PRACTICES_ANALYSIS-2026-06-23.md  SECURITY_CVE_ANALYSIS-2026-06-23.md  TEARDOWN-2026-06-17.md  TEARDOWN-2026-06-18.md  THE_ROAST.md  YOUTUBE-whats-left.md  YOUTUBE_HYDRATION_INVESTIGATION-2026-06-18.md  YOUTUBE_RENDERING_STABILIZATION_ACTION_PLAN.md  YOUTUBE_RENDER_CHECKDOWN.md  aurora-youtube-medium-article.md  youtube_workaround_inventory.md
docs/archive/: DOCKER.md  MOCKUP_REFLOW_IMPLEMENTATION_PLAN.md
docs/current/: ANALYSIS-youtube-rendering-2026-06-11.md  GOAL_WEBSITES.MD  HANDOFF-v8-pivot-2026-06-11.md  HANDOFF-v8-youtube-2026-06-13.md  IMPLEMENTATION_PLAN.md  POSTMORTEM-youtube-blank-page.md  POSTMORTEM-youtube-still-not-rendering-2026-06-11.md  WIKIPEDIA_ANALYSIS.md  YOUTUBE-whats-left.md
docs/current/phases/: PHASE_0.md  PHASE_1.md  PHASE_10.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md
fixtures/aurora-search/: index.html  styles.css
fixtures/dynamic-reflow/: index.html  styles.css
fixtures/raf-reflow/: index.html  styles.css
fixtures/wikipedia-rust/: index.html
fixtures/youtube/: index.html
src/: api.rs  blitz_document.rs  css.rs  dom.rs  fetch.rs  gpu_paint.rs  html.rs  identity.rs  js.rs  js_boa.rs  js_engine.rs  layout.rs  lib.rs  logging.rs  main.rs  media.rs  paint.rs  style.rs  window.rs
src/atlas/: atlas.rs  metrics.rs  mod.rs  packer.rs  tests.rs
src/css/: ast.rs  at_rules.rs  calc.rs  display.rs  dom_styles.rs  inline_style.rs  length.rs  mod.rs  properties.rs  selector.rs  selectors_impl.rs  shorthand.rs  style_map.rs  style_map_resolve.rs  stylesheet.rs  tests.rs  variables.rs
src/dom/: display.rs  mod.rs  node.rs  ops.rs  serialize.rs  serialize_html.rs  shadow.rs
src/fetch/: api.rs  capability.rs  chunked.rs  data_url.rs  errors.rs  headers.rs  http.rs  mod.rs  redirects.rs  resolve.rs  tests.rs  tls.rs  url.rs
src/font/: atlas_builder.rs  glyph.rs  metrics.rs  mod.rs  raster.rs  resources.rs  shape.rs
src/gpu_paint/: color.rs  element.rs  image.rs  mod.rs  painter.rs  scrollbar.rs  svg.rs  text.rs
src/html/: classify.rs  mod.rs  parser.rs  tag_parsing.rs  tests.rs  text.rs  tokenizer.rs  tokens.rs
src/js_boa/: accessor_install.rs  capture.rs  constructors.rs  convert.rs  mod.rs  network.rs  observers.rs  reflection.rs  registry.rs  runtime.rs  runtime_raf_tests.rs  runtime_style_tests.rs  runtime_tests.rs  serialization.rs  storage.rs  utils.rs
src/js_boa/accessors/: family.rs  identity.rs  layout.rs  mod.rs  objects.rs  text_html.rs
src/js_boa/document/: events.rs  factories.rs  fields.rs  implementation.rs  mod.rs  properties.rs  queries.rs
src/js_boa/globals/: browser_api.rs  core.rs  location.rs  mod.rs  navigator.rs  platform.rs  timers.rs
src/js_boa/node_create/: attributes.rs  commands.rs  create.rs  finish.rs  mod.rs  mutation.rs  queries.rs
src/js_boa/selectors/: mod.rs  query.rs  simple.rs
src/js_boa/style_class/: classlist.rs  mod.rs  style_object.rs  style_properties.rs
src/js_boa/tree/: mod.rs  mutation.rs  navigation.rs  nodelist.rs  traversal.rs
src/js_polyfills/: css_stub.js  custom_elements.js  event_constructors.js  polymer_shim.js  trusted_types.js  v8_base.js  v8_post.js
src/js_sm/: capture.rs  engine.rs  job_queue.rs  mod.rs  mutation_observer.rs  registry.rs  runtime.rs  runtime_tests.rs  serialization.rs  state.rs  utils.rs
src/js_sm/document/: api.rs  mod.rs
src/js_sm/globals/: browser_api.rs  core.rs  mod.rs  timers.rs
src/js_v8/: capture.rs  css_tests.rs  custom_elements.rs  mod.rs  mutation_observer.rs  node_create.rs  registry.rs  runtime.rs  runtime_tests.rs
src/js_v8/selectors/: query.rs
src/js_v8/style_class/: classlist.rs  mod.rs  style.rs
src/js_v8/tree/: mod.rs  mutation.rs  navigation.rs  traversal.rs
src/layout/: block.rs  box.rs  constants.rs  constraints.rs  construct.rs  control.rs  display.rs  document.rs  engine.rs  image.rs  inline.rs  inline_sequence.rs  inline_text.rs  mod.rs  parley_text.rs  rect.rs  taffy_adapter.rs  taffy_layout.rs  tests.rs  text_metrics.rs  tree.rs
src/layout/flex/: column.rs  measure.rs  mod.rs  row.rs  row_wrap.rs  spacing.rs  types.rs
src/layout/tests/: box_constraints.rs  core.rs  inline_image.rs
src/paint/: debug.rs  elements.rs  fill.rs  framebuffer.rs  mod.rs  painter.rs  tests.rs
src/render/: commands.rs  headless.rs  image_backend.rs  mod.rs  vello_backend.rs
src/runner/: cli.rs  event_loop.rs  fixtures.rs  images.rs  mod.rs  pipeline.rs  scripts.rs
src/style/: display.rs  inherited.rs  mod.rs  node.rs  tests.rs  tree.rs
src/stylo_bridge/: arena.rs  impls.rs  mod.rs
src/window/: app.rs  app_handler.rs  input.rs  mod.rs  open.rs  scene_helpers.rs  scroll_metrics.rs
src/window/chrome/: dioxus_chrome.rs  display.rs  identity.rs  mod.rs  nav.rs  scene.rs  tabs.rs  text.rs  top_bar.rs
src/window/screenshot/: chrome.rs  color.rs  layout.rs  mod.rs  primitives.rs  scrollbar.rs  text.rs
tests/: visual_regression.rs
tests/screenshots/: README.md
