
[package]
name = "aurora"
version = "0.1.0"
edition = "2024"

[features]
default = []
media-ffmpeg = ["dep:ffmpeg-next"]
taffy-document = []
engine-boa = ["dep:boa_engine", "dep:boa_gc", "dep:boa_runtime"]
v8 = ["dep:v8"]

[dependencies]
rustls = { version = "0.23", features = ["ring"] } # still needed for install_crypto_provider()
wgpu = "29.0.3"
vello = "0.9.0"
pollster = "0.4.0"
mozjs = "0.16.0"
log = "0.4"
fern = "0.7"
chrono = "0.4"
boa_engine = { version = "0.20", optional = true }
boa_gc = { version = "0.20", optional = true }
boa_runtime = { version = "0.20", optional = true }
ab_glyph = "0.2"
rustybuzz = "0.20.1"
peniko = "0.6"
#lowered dep because of blitz-dom transitive
image = "0.25.6"
ffmpeg-next = { version = "8.1.0", optional = true }
html5ever = "0.39.0"
markup5ever = "0.39.0"
cssparser = "0.37.0"
selectors = "0.38.0"
precomputed-hash = "0.1"
taffy = "0.10.1"
# parley pinned: 0.9 currently conflicts with the active vello/peniko/text stack.
# Revisit once Linebender crate versions align.
parley = "0.7"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "gzip", "deflate", "brotli"], default-features = false }
usvg = "0.47.0"
winit = "0.30.13"
url = "2.5.8"
blitz-dom = { version = "0.3.0-alpha.4", features = ["custom-widget", "tracing", "svg", "woff", "accessibility", "system_fonts", "autofocus", "floats", "file_input", "parallel-construct", "log_phase_times"] }
blitz-html = "0.3.0-alpha.4"
blitz-paint = "0.3.0-alpha.4"
blitz-traits = "=0.3.0-alpha.4"
anyrender_vello = "0.10.1"
v8 = { version = "150.0.0", optional = true }
# vello_svg removed: v0.9.0 links against vello 0.7 + usvg 0.46, incompatible with our vello 0.9 + usvg 0.47
